testsuite/lab2-testsuite/bad/arith_ass_int_min_bool.cc
int main () {
  let bool x = 0-false;
  return 0;
}
